--- a/package.json
+++ b/package.json
@@ -2,5 +2,16 @@
   "dependencies": {
     "express": "^4.19.2",
     "nodemon": "^3.1.4"
-  }
+  },
+  "name": "dev-ida-lab-sorensen",
+  "version": "1.0.0",
+  "description": "",
+  "main": "app.js",
+  "devDependencies": {},
+  "scripts": {
+    "dev": "nodemon app.js"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
